# haproxy-api-rs

./: Cargo.toml  LICENSE  README.md
examples/async_serve_file/: Cargo.toml  Dockerfile  haproxy.cfg  haproxy.lua
examples/async_serve_file/src/: lib.rs
examples/brotli/: Cargo.toml  brotli.lua  haproxy.cfg
examples/brotli/src/: lib.rs
examples/simple/: Cargo.toml  haproxy.cfg  haproxy.lua
examples/simple/src/: lib.rs
src/: async.rs  channel.rs  converters.rs  core.rs  fetches.rs  filter.rs  http.rs  http_message.rs  lib.rs  listener.rs  proxy.rs  server.rs  stick_table.rs  txn.rs
