[package]
name = "haproxy-api"
version = "0.4.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2021"
repository = "https://github.com/khvzak/haproxy-api-rs"
documentation = "https://docs.rs/haproxy-api"
readme = "README.md"
keywords = ["haproxy"]
license = "MIT"
description = """
HAProxy 2.x Lua API
"""

[package.metadata.docs.rs]
features = ["lua54", "vendored"]

[workspace]
members = [
    "examples/async_serve_file",
    "examples/simple",
]

[features]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
vendored = ["mlua/vendored"]

[dependencies]
mlua = { version = "0.8", features = ["async", "serialize"] }
