[package]
name = "haproxy-api"
version = "0.6.0"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2021"
repository = "https://github.com/khvzak/haproxy-api-rs"
documentation = "https://docs.rs/haproxy-api"
readme = "README.md"
keywords = ["haproxy"]
license = "MIT"
description = """
HAProxy 2.x Lua API
"""

[package.metadata.docs.rs]
features = ["lua54"]

[workspace]
members = [
    "examples/async_serve_file",
    "examples/brotli",
    "examples/simple",
]

[features]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]

[dependencies]
mlua = { version = "0.9", features = ["async", "serialize", "module"] }
