[package]
name = "haproxy-api"
version = "0.8.1"
authors = ["Aleksandr Orlenko <zxteam@pm.me>"]
edition = "2021"
repository = "https://github.com/khvzak/haproxy-api-rs"
documentation = "https://docs.rs/haproxy-api"
readme = "README.md"
keywords = ["haproxy"]
license = "MIT"
description = """
HAProxy 2.8+ Lua API
"""

[package.metadata.docs.rs]
features = ["lua54"]

[workspace]
members = [
    "examples/async_serve_file",
    "examples/brotli",
    "examples/simple",
]

[features]
default = ["async", "lua54"]
async = ["mlua/async", "dep:tokio", "dep:pin-project-lite", "dep:futures-util", "dep:rustc-hash", "dep:dashmap"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]

[dependencies]
mlua = { version = "0.9.9", features = ["serialize", "module"] }
tokio = { version = "1.0", features = ["net", "io-util", "sync", "rt-multi-thread"], optional = true }
pin-project-lite = { version = "0.2", optional = true }
futures-util = { version = "0.3", optional = true }
rustc-hash = { version = "2.0", optional = true }
dashmap = { version = "6.0", optional = true }
