[package]
name = "haproxy_async_module"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["vendored"]
lua54 = ["haproxy-api/lua54"]
lua53 = ["haproxy-api/lua53"]
vendored = ["haproxy-api/vendored"]

[dependencies]
haproxy-api = { path = "../.." }
mlua = { version = "0.7", features = ["module", "macros"] }
async-std = "1.9.0"
