[package]
name = "haproxy_async_module"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["lua54"]
lua54 = ["haproxy-api/lua54"]
lua53 = ["haproxy-api/lua53"]

[dependencies]
haproxy-api = { path = "../.." }
mlua = { version = "0.9", features = ["macros"] }
tokio = { version = "1.32", features = ["full"] }
bstr = "1.0"
